css/parser/tests/errors/rome/invalid/media/feature/output.stderr
error: InvalidMediaQuery
 --> $DIR/tests/errors/rome/invalid/media/feature/input.css:1:19
  |
1 | @media screen and {}
  |                   ^

